Update and rename global.html to ghost.html

--- a/assets/ghost.html
+++ b/assets/ghost.html
@@ -185,6 +185,9 @@
             GHOST RIDER IS RUNNING
         </div>
 
+    </div class="script-by">
+    © CYBER-SPACE & TCRONEB-HACKX
+
         <div class="battery-status">
             <span id="battery-percentage" class="battery-percentage">0% Battery</span>
             <svg width="30" height="30">
