--- a/assets/ghost.html
+++ b/assets/ghost.html
@@ -187,6 +187,7 @@
 
     </div class="script-by">
     © CYBER-SPACE & TCRONEB-HACKX
+</div>
 
         <div class="battery-status">
             <span id="battery-percentage" class="battery-percentage">0% Battery</span>
